--- a/src/main/resources/templates/add-link-selector.html
+++ b/src/main/resources/templates/add-link-selector.html
@@ -22,7 +22,7 @@
 
         <div class="mb-3">
             <label for="whichSite" class="form-label">Which Site (if adding new):</label>
-            <input type="text" id="whichSite" th:field="*{whichSite}" class="form-control" placeholder="For example fun/biblio"/>
+            <input type="text" id="whichSite" th:field="*{whichSite}" class="form-control" placeholder="For example fun/biblio" required/>
         </div>
 
         <div class="mb-3">
