--- a/src/main/resources/templates/tour-list.html
+++ b/src/main/resources/templates/tour-list.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<div th:replace="~{fragments/header}"></div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tour Details</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+</head>
 
-<style>
-    .carousel-inner img {
-        height: 200px;
-        object-fit: cover;
-    }
-</style>
+<body class="bg-dark text-light">
+
+<div th:replace="~{fragments/nav}"></div>
 
 <div class="container mt-4">
     <h1 class="text-center">All Tours</h1>
