Corrected the logic of the parser
- slightly changed the logic of the parser,
- added error logging
- added the ability to view errors

--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -18,6 +18,9 @@
                         <a class="nav-link" href="/link">Ссылки</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/errors">error log</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/addLinkSelector">add</a>
                     </li>
                 </ul>
