--- a/src/main/resources/templates/selectors.html
+++ b/src/main/resources/templates/selectors.html
@@ -20,18 +20,18 @@
             <div class="card shadow-sm" style="background-color: #6C757D; color: white; height: 100%;">
                 <!-- Заголовок карточки -->
                 <div class="card-header text-center bg-dark text-white">
-                    <h5 class="card-title" th:text="${selector.whichSite}">Site Name</h5>
+                    <h5 class="card-title" th:text="${selector.whichSite}"></h5>
                 </div>
 
                 <!-- Основное тело карточки -->
                 <div class="card-body">
                     <!-- Блок с селекторами -->
-                    <h6 class="card-subtitle mb-3 text-muted">Selectors</h6>
+                    <h6 class="card-subtitle mb-3 text-muted">Селекторы для парсинга данных</h6>
                     <ul class="list-group">
-                        <li class="list-group-item" style="background-color: #495057; color: white;"><strong>Hotel
-                            Selector:</strong> <span th:text="${selector.hotelSelector}">Selector 1</span></li>
-                        <li class="list-group-item" style="background-color: #495057; color: white;"><strong>Price
-                            Selector:</strong> <span th:text="${selector.priceSelector}">Selector 2</span></li>
+                        <li class="list-group-item" style="background-color: #495057; color: white;"><strong>Наименование отеля:<br></strong> <span th:text="${selector.hotelSelector}"></span></li>
+                        <li class="list-group-item" style="background-color: #495057; color: white;"><strong>Стоимость:<br></strong> <span th:text="${selector.priceSelector}"></span></li>
+                        <li class="list-group-item" style="background-color: #495057; color: white;"><strong>Начало тура:<br></strong> <span th:text="${selector.tourStartDateSelector}"></span></li>
+                        <li class="list-group-item" style="background-color: #495057; color: white;"><strong>Адрес отеля:<br></strong> <span th:text="${selector.hotelAddressSelector}"></span></li>
                     </ul>
 
                     <!-- Кнопка изменения -->
