--- a/src/main/resources/templates/selectors.html
+++ b/src/main/resources/templates/selectors.html
@@ -13,7 +13,7 @@
 <div th:replace="~{fragments/nav}"></div>
 
 <div class="container mt-4">
-    <h1 class="text-center mb-4 text-light">All Selectors</h1>
+    <h1 class="text-center mb-4 text-light">Информация по селекторам XPath</h1>
     <div class="row mt-4 gy-4">
         <!-- Пример карточки для каждого селектора -->
         <div th:each="selector : ${selectors}" class="col-md-4">
