--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,7 +1,7 @@
 <div th:fragment="nav">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/tours">Tour parser</a>
+            <a class="navbar-brand" href="/tours">Информационный сайт</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -9,19 +9,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/tours">Home</a>
+                        <a class="nav-link" href="/tours">Главная страница</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/selector">Селекторы</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/link">Ссылки</a>
+                        <a class="nav-link" href="/errors">Лог ошибок</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/errors">error log</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/addLinkSelector">add</a>
+                        <a class="nav-link" href="/addLinkSelector">Добавить для парсинга</a>
                     </li>
                 </ul>
             </div>
